2012-05-24  Allan Sandfeld Jensen  <allan.jensen@nokia.com>

        cti_vm_throw gets kicked out by gcc 4.6 -flto
        https://bugs.webkit.org/show_bug.cgi?id=56088

        Reviewed by Darin Adler.

        Define REFERENCED_FROM_ASM to __attribute__((used)) on GCC.

        * wtf/Compiler.h:

2012-05-23  Darin Adler  <darin@apple.com>

        Optimize iteration of empty hash tables
        https://bugs.webkit.org/show_bug.cgi?id=87215

        Reviewed by Geoffrey Garen.

        Iteration of empty hash tables was showing up on simple page loading
        profiles due to the use of hash tables in the
        NodeListsNodeData::invalidateCaches and
        NodeListsNodeData::invalidateCachesThatDependOnAttributes functions.
        It's worth optimizing the case of an empty table.

        * wtf/HashTable.h:
        (WTF::HashTable::begin): Return the known-good end iterator when the
        table is empty. This makes iterating an empty table faster because we
        avoid skipping empty and deleted buckets.

2012-05-22  Geoffrey Garen  <ggaren@apple.com>

        Build fix.

        * wtf/RAMSize.cpp:
        (WTF::computeRAMSize): sysctl expects a uint64_t, so use that and then
        cast back to size_t. Since it's coneivable that a 32bit process would
        run on a system with more than 4GB RAM, I added a paranoid check for
        that condition.

2012-05-22  Jessie Berlin  <jberlin@apple.com>

        Build fix.

        * wtf/RAMSize.cpp:
        (WTF::computeRAMSize):
        If you say you are going to return a size_t, actually return a size_t.

2012-05-21  Geoffrey Garen  <ggaren@apple.com>

        GC allocation trigger should be tuned to system RAM
        https://bugs.webkit.org/show_bug.cgi?id=87039

        Reviewed by Darin Adler.

        Added a helper function for measuring system RAM.

        * GNUmakefile.list.am:
        * WTF.gypi:
        * WTF.pro:
        * WTF.vcproj/WTF.vcproj:
        * WTF.xcodeproj/project.pbxproj: